--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        {{ asset "app.js" }}
+        <link rel="stylesheet" href="{{ assetPath "/css/app.css" }}">
+        <script type="application/javascript" src="{{ assetPath "/js/app.js" }}"></script>
     </head>
     <body>
         <h1>{{.Title}}</h1>
