add search example;fixes;bootstrap-vue

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,2 @@
-body {
-    color: black;
-    background-color: lightgray;
-}
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
+@import 'node_modules/bootstrap-vue/src/index.scss';
