renderer;fetch results with vue

--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -6,18 +6,7 @@
     <link rel="stylesheet" href="{{ assetPath "/css/app.css" }}">
   </head>
   <body>
-    <h1>{{.Title}}</h1>
-
-    <div>
-      <b-form-input v-model="text" placeholder="Enter your query here"></b-form-input>
-      <div class="mt-2">total: {{.Hits.total}}</div>
-    </div>
-
-    <ul>
-    {{- range .Hits.hits -}}
-        <li>{{._source.title}}</li>
-    {{- end}}
-    </ul>
+    {{ yield }}
     <script type="application/javascript" src="{{ assetPath "/js/app.js" }}"></script>
-</body>
+  </body>
 </html>
