--- a/templates/orpheus/index.tmpl
+++ b/templates/orpheus/index.tmpl
@@ -1,3 +1,4 @@
+{{define "content"}}
 <h1>{{.Title}}</h1>
 
 <div>total: {{.Hits.total}}</div>
@@ -20,3 +21,4 @@
     <p>Sorry, no results for your query&hellip;</p>
   </div>
 </div>
+{{end}}
