--- a/templates/orpheus/layout.tmpl
+++ b/templates/orpheus/layout.tmpl
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{assetPath "/css/app.css"}}">
   </head>
   <body>
-    [DEFAULT LAYOUT]
+    [ORPHEUS LAYOUT]
     {{template "content" .}}
     <script type="application/javascript" src="{{assetPath "/js/app.js"}}"></script>
   </body>
