--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,2 +1,6 @@
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import 'node_modules/bootstrap-vue/src/index.scss';
+
+mark, .mark {
+    padding: 0.2em 0;
+}
