source (librarian) view

--- a/themes/opale/templates/show.tmpl
+++ b/themes/opale/templates/show.tmpl
@@ -1,1 +1,8 @@
 <h1>{{.Rec.Title}}</h1>
+
+{{renderMetadata .Rec.RawMetadata}}
+
+{{if .Rec.RawSource }}
+<h3>Librarian view</h3>
+{{renderSource .Rec.RawSource}}
+{{end}}
