--- a/themes/ugent/scss/screen.scss
+++ b/themes/ugent/scss/screen.scss
@@ -2,6 +2,7 @@
 @import 'node_modules/bootstrap-vue/src/index.scss';
 $fa-font-path: "~font-awesome/fonts";
 @import '~font-awesome/scss/font-awesome';
+@import '~modularscale-sass/stylesheets/modularscale';
 
 @import 'common/variables';
 
