--- a/themes/orpheus/templates/rec/show.gohtml
+++ b/themes/orpheus/templates/rec/show.gohtml
@@ -1,7 +1,10 @@
+{{define "yield"}}
 <h1>
     {{renderTitle .Rec.RawMetadata}}
     {{if .Rec.Type}}<span class="badge badge-secondary">{{.Rec.Type}}</span>{{end}}
 </h1>
+
+<div id="iiif-viewer"></div>
 
 {{renderMetadata .Rec.RawMetadata}}
 
@@ -12,3 +15,4 @@
 
 <h3>Internal view</h3>
 {{renderInternalView .Rec}}
+{{end}}
