localization through "lang" query param or accept header

--- a/themes/orpheus/templates/layouts/app.gohtml
+++ b/themes/orpheus/templates/layouts/app.gohtml
@@ -8,7 +8,7 @@
   </head>
   <body>
     [ORPHEUS LAYOUT]
-    {{template "yield" .Yield}}
+    {{template "content" .}}
     <script type="application/javascript" src="{{assetPath "/js/app.js"}}"></script>
   </body>
 </html>
