--- a/themes/ugent/templates/layouts/app.gohtml
+++ b/themes/ugent/templates/layouts/app.gohtml
@@ -43,7 +43,7 @@
       </nav>
 
       <div class="main-content container">
-        {{template "yield" .Yield}}
+        {{template "content" .}}
       </div>
 
       <footer class="footer container bg-primary text-white align-left p-3 pb-0">
