--- a/themes/orpheus/templates/rec/show.gohtml
+++ b/themes/orpheus/templates/rec/show.gohtml
@@ -1,4 +1,5 @@
 {{define "content"}}
+
 <h1>
     {{renderTitle .Data.Rec.RawMetadata}}
     {{if .Data.Rec.Type}}<span class="badge badge-secondary">{{.Data.Rec.Type}}</span>{{end}}
@@ -9,10 +10,16 @@
 {{renderMetadata .Data.Rec.RawMetadata}}
 
 {{if .Data.Rec.RawSource }}
-<h3>Librarian view</h3>
+<h3>{{.Locale.Get "Librarian view"}}</h3>
 {{renderSourceView .Data.Rec.RawSource}}
 {{end}}
 
-<h3>Internal view</h3>
+<h3>{{.Locale.Get "Developer view"}}</h3>
 {{renderInternalView .Data.Rec}}
+
+<h3>RIS</h3>
+<code><pre>
+{{renderRIS .Data.Rec}}
+</pre></code>
+
 {{end}}
