--- a/themes/ugent/templates/rec/show.gohtml
+++ b/themes/ugent/templates/rec/show.gohtml
@@ -54,7 +54,7 @@
     {{end}}
 </dl>
 
-{{if .Yield.Rec.Source }}
+{{if .Yield.Rec.SourceMetadata }}
 <h3>{{.Locale.Get "Librarian view"}}</h3>
 {{renderSourceView .Yield.Rec.Rec}}
 {{end}}
