oembed link test

--- a/themes/orpheus/templates/rec/show.gohtml
+++ b/themes/orpheus/templates/rec/show.gohtml
@@ -1,3 +1,11 @@
+{{define "head"}}
+    {{if .Yield.Rec.IIIFManifest}}
+    <link rel="alternate" type="application/json+oembed"
+    href="https://eliot1.ugent.be/oembed?url=https://eliot1.ugent.be/collection/orpheus/{{.Yield.Rec.ID}}"
+    title="oEmbed IIIF viewer">
+    {{end}}
+{{end}}
+
 {{define "content"}}
 <div class="container">
     <h1>
