--- a/themes/orpheus/templates/layouts/app.gohtml
+++ b/themes/orpheus/templates/layouts/app.gohtml
@@ -5,10 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{assetPath "/css/app.css"}}">
+    {{template "head" .}}
   </head>
   <body>
     {{template "content" .}}
     <script type="application/javascript" src="{{assetPath "/js/app.js"}}"></script>
   </body>
 </html>
+{{end}}
+
+{{define "head"}}
 {{end}}
