Added: Vue Tagger component.

--- a/themes/orpheus/templates/rec/show.gohtml
+++ b/themes/orpheus/templates/rec/show.gohtml
@@ -22,6 +22,8 @@
     </p>
     {{end}}
 
+    <div id="tagger" data-manifest-url="{{.Yield.Rec.ID}}"></div>
+
     <dl>
         {{if .Yield.Rec.Author}}
         <dt>Authors</dt>
