booktower-images collection; tagger prototype

--- a/themes/ugent/templates/rec/show.gohtml
+++ b/themes/ugent/templates/rec/show.gohtml
@@ -22,6 +22,10 @@
 </p>
 {{end}}
 
+{{if eq .Yield.Collection "booktower-images"}}
+<div id="tagger" data-initial-tags="{{toJSON .Yield.Rec.Tag}}"></div>
+{{end}}
+
 <dl>
     {{if .Yield.Rec.Author}}
     <dt>Authors</dt>
